Resultat avec format JSON pour getListPersonsNaming